# Piqi

./: .gitignore  CMakeLists.txt  PKGBUILD  PiqiConfig.cmake.in  README.md  bookmarkdetails.h  comment.h  comments.h  illustration.cpp  illustration.h  illusts.h  imageurls.cpp  imageurls.h  piqi.cpp  piqi.h  privacypolicy.h  profile.h  searchrequest.h  series.h  stamp.h  tag.h  user.cpp  user.h  userdetails.h  workspace.h
.github/assets/: PKGBUILD
.github/workflows/: archlinux.yaml
src/: CMakeLists.txt  bookmarkdetails.cpp  bookmarkdetails.h  comment.cpp  comment.h  comments.cpp  comments.h  illustration.cpp  illustration.h  illusts.cpp  illusts.h  imageurls.cpp  imageurls.h  novel.cpp  novel.h  novels.cpp  novels.h  piqi.cpp  piqi.h  piqiresponse.cpp  piqiresponse.h  privacypolicy.cpp  privacypolicy.h  profile.cpp  profile.h  qepr.h  requestworker.cpp  requestworker.h  searchrequest.cpp  searchrequest.h  series.cpp  series.h  stamp.cpp  stamp.h  tag.cpp  tag.h  tags.cpp  tags.h  user.cpp  user.h  (+6 more)
